feat: 費用詳細修正
