# server/app/resources/expense_resource.rb
@@ -7,7 +7,12 @@ class ExpenseResource
     resource.amount_of_money.to_f
   end
 
-  attributes id: [String, true], payment_group_id: [String, true], description: String, paid_on: [String, true]
+  attribute :is_paid do |resource|
+    resource.debt_records.first.is_paid
+  end
+
+  attributes id: [String, true], description: String, paid_on: [String, true]
 
   has_one :user, resource: UserResource
+  has_one :payment_group, resource: PaymentGroupResource
 end
